se agrega menu mobile

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,3 +1,4 @@
+/* General */
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -8,12 +9,10 @@
     --md: 16px;
     --lg: 18px;
 }
-
 body {
     margin: 0;
     font-family: 'Quicksand', sans-serif;
 }
-
 .inactive {
     display: none;
 }
@@ -127,6 +126,42 @@ nav {
     display: inline-block;
 }
 
+/* Mobile menu: Clase 8 */
+.mobile-menu {
+    position: absolute;
+    top: 60px;
+    padding: 24px;
+    height: 100vh;
+}
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+.mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0 0;
+    list-style: none;
+}
+.mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+}
+.mobile-menu ul:nth-child(3) {
+    margin-bottom: 24px;
+}
+.mobile-menu ul li {
+    margin-bottom: 24px;
+}
+.email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+}
+.sign-out {
+    color: var(--hospital-green) !important;
+    font-size: var(--sm);
+}
+
 @media (max-width: 640px){
     .menu {
         display: block;
@@ -135,6 +170,14 @@ nav {
         display: none;
     }
     .navbar-email {
+        display: none;
+    }
+    .desktop-menu {
+        display: none;
+    }
+}
+@media (min-width: 641px){
+    .mobile-menu {
         display: none;
     }
 }
